Adicionando ícones nas subtabelas da equipe

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                             <th>Equipe<img src="https://cdn-icons-png.flaticon.com/128/5069/5069162.png" alt="Icone da tabela Equipe" class="table-icon"></th>
                         </tr>
                         <tr class="thead4-eqp">
-                            <th>Gestor</th>
+                            <th><img src="https://cdn-icons-png.flaticon.com/128/7653/7653250.png" alt="Ícone do gestor para a tabela de Equipe" class="table-icon"> Gestor</th>
                         </tr>
                         <tr class="tdata4">
                             <td>Tadeu</td>
                         </tr>
                         <tr class="thead4-eqp">
-                            <th>Especialista</th>
+                            <th><img src="https://cdn-icons-png.flaticon.com/128/3916/3916615.png" alt="Ícone do especialista para a tabela de Equipe" class="table-icon"> Especialista</th>
                         </tr>
                         <tr class="tdata4">
                             <td>Zé</td>
@@ -72,7 +72,7 @@
                             <td>Jão</td>
                         </tr>
                         <tr class="thead4-eqp">
-                            <th>Squad</th>
+                            <th><img src="https://cdn-icons-png.flaticon.com/128/9856/9856655.png" alt="Ícone do squad para a tabela de Equipe" class="table-icon"> Squad</th>
                         </tr>
                         <tr class="tdata4">
                             <td>Maria</td>
