--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class="flex-row">
+        <div class="flex-row2">
             <div class="box">
                 <div class="box4">
                     <table class="table4">
